# youtube-source

./: .gitignore  CONVERSION_SUMMARY.md  CacheIndex.cpp  CacheIndex.h  LICENSE_MANAGER_IMPLEMENTATION_GUIDE.md  LICENSING_README.md  LicenseDialog.cpp  LicenseDialog.h  LicenseDialogV2.cpp  LicenseDialogV2.h  MyPlugin8.h  PluginVersion.h  README_YouTubeSource.md  SearchDialog.cpp  SearchDialog.h  SoundCloudSource.cpp  SoundCloudSource.h  SoundCloudSource.vcxproj  WebViewHost.cpp  WebViewHost.h  WebViewHostMac.h  WebViewHostMac.mm  YouTubeSource.cpp  YouTubeSource.h  YouTubeSource.manifest  YouTubeSource.rc  YouTubeSource.vcxproj  YtDlpRunner.cpp  YtDlpRunner.h  build_64.bat  increment_version.sh  install_plugin.bat  vdjOnlineSource8.h  vdjPlugin8.h
.github/workflows/: build-macos-pkg.yml
installer/: YouTubeSource.iss  build_installer.bat
installer/output/: Readme.txt
licensing/: build_keygen.bat  generate_key.cpp  keys.csv
mac/: CMakeLists.txt  Distribution.xml  README_MAC.md  build_pkg.sh  install_mac.sh
mac/resources/: conclusion.html  license.rtf  welcome.html
mac/scripts/: postinstall
plugin-marketplace/: .htaccess  README.md  config.php  index.php
plugin-marketplace/database/: add_auth_token.sql  add_device_slots.sql  add_devices_column.sql  check_your_duplicates.sql  cleanup_and_migrate.sql  cleanup_duplicate_licenses.sql  find_duplicate_licenses.sql  fix_device_slots.sql  fix_identifier.sql  install.php  preserve_licenses_alternative.sql  preserve_licenses_final.sql  preserve_licenses_on_plugin_delete.sql  (+2 more)
ui/: app.js  index.html  styles.css
(+58 files in other folders)
